--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/Yulkazs/rocambolesque/issues"
   },
   "homepage": "https://github.com/Yulkazs/rocambolesque#readme",
-  "dependencies": {
+  "devDependencies": {
     "sass": "^1.69.5"
   }
 }
