Package.json veranderd

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass -w public/scss:public/css",
-    "minify": "sass -w public/scss:public/css--style=compressed"
+    "sass": "sass -w public/sass:public/css",
+    "minify": "sass -w public/sass:public/css--style=compressed"
     
   },
   "keywords": [],
