--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass -w public/scss:public/css",
-    "minify": "sass -w public/scss:public/css--style=compressed"
-    
+    "minify": "sass -w public/scss:public/css --style=compressed"
   },
   "keywords": [],
   "author": "",
